Implemented RECRM API usage. Covered the project with tests, and made the result to be written in excel table

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,13 @@ repositories {
 dependencies {
     testImplementation(platform('org.junit:junit-bom:5.10.1'))
     testImplementation('org.junit.jupiter:junit-jupiter')
+    implementation('com.google.code.gson:gson:2.10.1')
+    implementation('org.apache.poi:poi:5.2.0')
+    implementation('org.apache.poi:poi-ooxml:5.2.0')
+    implementation('org.jxls:jxls-jexcel:1.0.9')
+    implementation('org.dhatim:fastexcel-reader:0.15.3')
+    implementation('org.dhatim:fastexcel:0.15.3')
+
 }
 
 test {
